overflow issue fixed commiting

--- a/css/futo.css
+++ b/css/futo.css
@@ -4,6 +4,9 @@ html,
 *::after{
 	box-sizing: border-box;
 }
+body{
+            overflow-x: hidden;
+        }
 	.parent{
 		height: 100vh;
 		width: 100vw;
